    (not enabled by default).
  - Tactic "record_split_simp_tac" to split and simplify records added.
 
* 'specification' command added, allowing for definition by
  specification.  There is also an 'ax_specification' command that
  introduces the new constants axiomatically.

* arith(_tac) is now able to generate counterexamples for reals as well.

* SET-Protocol: formalization and verification of the SET protocol suite;

* HOL-ex: InductiveInvariant_examples illustrates advanced recursive function
 defintions, thanks to Sava Krsti\'{c} and John Matthews.

* Unions and Intersections:
  The x-symbol output syntax of UN and INT has been changed
  from "\<Union>x \<in> A. B" to "\<Union\<^bsub>x \<in> A\<^esub> B"
  i.e. the index formulae has become a subscript, like in normal math.
  Similarly for "\<Union>x. B", and for \<Inter> instead of \<Union>.
  The subscript version is also accepted as input syntax.


New in Isabelle2003 (May 2003)
--------------------------------

*** General ***

* Provers/simplifier:

  - Completely reimplemented method simp (ML: Asm_full_simp_tac):
    Assumptions are now subject to complete mutual simplification,
    not just from left to right. The simplifier now preserves
    the order of assumptions.

    Potential INCOMPATIBILITY:

    -- simp sometimes diverges where the old version did
       not, e.g. invoking simp on the goal

        [| P (f x); y = x; f x = f y |] ==> Q

       now gives rise to the infinite reduction sequence

        P(f x) --(f x = f y)--> P(f y) --(y = x)--> P(f x) --(f x = f y)--> ...

       Using "simp (asm_lr)" (ML: Asm_lr_simp_tac) instead often solves this
       kind of problem.

    -- Tactics combining classical reasoner and simplification (such as auto)
       are also affected by this change, because many of them rely on
       simp. They may sometimes diverge as well or yield a different numbers
       of subgoals. Try to use e.g. force, fastsimp, or safe instead of auto